--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -24,6 +24,11 @@ jobs:
         with:
           submodules: recursive
 
+      - name: install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libblas-dev liblapack-dev libboost-program-options-dev libboost-serialization-dev patchelf
+
       - name: Install scip@9.2.1
         run: |
           wget https://www.scipopt.org/download/release/SCIPOptSuite-9.2.1-Linux-ubuntu24.sh
