--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -48,6 +48,7 @@ jobs:
         run: >
           cmake --build ${{github.workspace}}/build
           --config ${{env.BUILD_TYPE}}
+          -j $(nproc)
 
       - name: Test
         working-directory: ${{github.workspace}}/build
