--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -6,42 +6,42 @@ on:
   pull_request:
     branches: [ "main" ]
 
-env:
-  BUILD_TYPE: Debug
-  SCIP_INSTALL_DIR: /opt/SCIPOptSuite-9.2.1
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  ubuntu-build:
+    runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        build_type: [ Debug, Release ]
+    env:
+      SCIP_INSTALL_DIR: /opt/SCIPOptSuite-9.2.1
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           submodules: recursive
 
-      - name: install dependencies
+      - name: Install dependencies (Ubuntu)
         run: |
           sudo apt-get update
           sudo apt-get install -y libopenblas-dev libopenblas0 liblapack3 gfortran libtbb-dev libcliquer1 libgmp10 libboost-program-options-dev libboost-serialization-dev libmetis5 patchelf
 
-      - name: Install scip@9.2.1
+      - name: Install SCIP (Ubuntu)
         run: |
           wget --no-verbose https://www.scipopt.org/download/release/SCIPOptSuite-9.2.1-Linux-ubuntu24.sh
           chmod +x SCIPOptSuite-9.2.1-Linux-ubuntu24.sh
           ./SCIPOptSuite-9.2.1-Linux-ubuntu24.sh --skip-license --prefix=${{ env.SCIP_INSTALL_DIR }}
 
-      - name: Configure CMake
-        run: >
-          cmake -B ${{github.workspace}}/build
-          -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-          -DSCIP_DIR=${{ env.SCIP_INSTALL_DIR }}
+      - name: Configure CMake (Ubuntu - ${{ matrix.build_type }})
+        run: |
+          mkdir -p ${{ github.workspace }}/build-${{ matrix.build_type }}
+          cmake -B ${{ github.workspace }}/build-${{ matrix.build_type }} \
+                -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+                -DSCIP_DIR=${{ env.SCIP_INSTALL_DIR }}
 
-      - name: Build
-        run: >
-          cmake --build ${{github.workspace}}/build
-          --config ${{env.BUILD_TYPE}}
-          -j $(nproc)
+      - name: Build project (Ubuntu - ${{ matrix.build_type }})
+        run: |
+          cmake --build ${{ github.workspace }}/build-${{ matrix.build_type }} --config ${{ matrix.build_type }} -j $(nproc)
 
-      - name: Test
-        working-directory: ${{github.workspace}}/build
-        run: ctest -C ${{env.BUILD_TYPE}}
+      - name: Run tests (Ubuntu - ${{ matrix.build_type }})
+        working-directory: ${{ github.workspace }}/build-${{ matrix.build_type }}
+        run: ctest -C ${{ matrix.build_type }}
