drop scip version

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           brew update
           brew install libomp
-          brew install scip@9.2.1
+          brew install scip
 
       - name: Configure CMake (macOS - ${{ matrix.build_type }})
         run: |
